# dotai

./: AGENTS.md  AGENTS.sh  PROJECT.md
.agent/: .gitignore  GEMINI.md  README.md  composer-installer.php  composer.json  skills
.agent/memory/: .env.example  .gitattributes  .gitignore  README.md  install-project-memory  mcp-project-memory  project-memory  pyproject.toml  setup.sh
.agent/memory/.githooks/: post-merge
.agent/memory/data/: project_memory.db
.agent/memory/src/: __init__.py  build.py  config.py  db.py  decay.py  deps.py  git.py  inspector.py  llm.py  models.py  openrouter.py  project-memory  prompts.py  server.py  stores.py
.agent/memory/tests/: conftest.py  test_build.py  test_db.py  test_decay.py  test_git.py  test_inspector.py  test_stores.py
.agent/rules/: core-engineering.md  core-parallel-evaluation.md  core-pre-flight.md  core-quality-assurance.md  core-testing.md  core-workflow-authoring.md  core-workflow.md  engineering.md  language-css.md  language-default.md  language-js.md  language-php.md  parallel-evaluation.md  platform-node.md  platform-wordpress.md  pre-flight.md  quality-assurance.md  retrospective.md  workflow.md
.agent/workflows/: add-skills.md  audit-agent.md  audit-all.md  audit-knowledge.md  audit-memory.md  audit-policy.md  audit-rules.md  audit-sdlc.md  audit-sldc.md  audit-usage.md  audit-workflows.md  capture.md  (+12 more)
.ai/: index.md
.antigravity/: config.json
.codex/: config.json  config.toml
.continue/: config.json
.copilot/: instructions.json
.cursor/: rules.md
.gemini/: styleguide.md
.windsurf/: rules.md
(+12 files in other folders)
