[project]
name = "project-memory"
version = "1.0.0"
description = "Persistent, queryable project knowledge derived from git history"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
cache_dir = ".venv/.pytest_cache"

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
extraPaths = ["."]
